# sqlite-playground

./: .gitignore  CMakeLists.txt  README.md  commented code.txt  mytest.cpp  test.cpp  test.ipynb
Databases/: mydb.db  testdb1.db
dlls/: CMakeLists.txt
python/: test.ipynb
sqlite3/: CMakeLists.txt
src/: charOperations.cpp  charOperations.h  main.cpp  meson.build  mytest.cpp  test.cpp
